@@ -20,9 +20,6 @@ package org.apache.hadoop.metrics.util;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Set;
-import java.util.Map.Entry;
-
 
 /**
  * 
